added analysis section to notebook

--- a/stadtrad_solution.ipynb
+++ b/stadtrad_solution.ipynb
@@ -70,17 +70,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_dataset(file_path, index_col=None, date_columns=None, delimiter=','):\n",
-    "    df = pd.read_csv(file_path, index_col=index_col, parse_dates=date_columns, sep=delimiter)\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "RAW_DATA = './data/raw/'\n",
     "PROCESSED_DATA = './data/processed/'\n",
     "RENTAL_ZONES = 'OPENDATA_RENTAL_ZONE_CALL_A_BIKE.csv'\n",
@@ -91,9 +80,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load and join data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import helper"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -294,9 +301,465 @@
     }
    ],
    "source": [
-    "df = load_dataset(RAW_DATA + RENTAL_ZONES, index_col='RENTAL_ZONE_HAL_ID', delimiter=';')\n",
-    "df.head()"
+    "df_rental = helper.load_dataset(RAW_DATA + RENTAL_ZONES, index_col='RENTAL_ZONE_HAL_ID', delimiter=';')\n",
+    "df_rental.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VEHICLE_MODEL_TYPE</th>\n",
+       "      <th>VEHICLE_MANUFACTURER_NAME</th>\n",
+       "      <th>VEHICLE_MODEL_NAME</th>\n",
+       "      <th>VEHICLE_TYPE_NAME</th>\n",
+       "      <th>VIN</th>\n",
+       "      <th>REGISTRATION_PLATE</th>\n",
+       "      <th>SERIAL_NUMBER</th>\n",
+       "      <th>KW</th>\n",
+       "      <th>FUEL_TYPE_NAME</th>\n",
+       "      <th>OWNERSHIP_TYPE</th>\n",
+       "      <th>CAPACITY_AMOUNT</th>\n",
+       "      <th>ACCESS_CONTROL_COMPONENT_TYPE</th>\n",
+       "      <th>COMPANY</th>\n",
+       "      <th>COMPANY_GROUP</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VEHICLE_HAL_ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>110466</th>\n",
+       "      <td>Fahrrad</td>\n",
+       "      <td>Biketec</td>\n",
+       "      <td>DB-Look</td>\n",
+       "      <td>CallBike</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4467</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kauf</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CAB GPRS 2.0</td>\n",
+       "      <td>Call a Bike</td>\n",
+       "      <td>Call a Bike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110471</th>\n",
+       "      <td>Fahrrad</td>\n",
+       "      <td>Biketec</td>\n",
+       "      <td>DB-Look</td>\n",
+       "      <td>CallBike</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4472</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kauf</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CAB 4.0</td>\n",
+       "      <td>Call a Bike</td>\n",
+       "      <td>Call a Bike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110574</th>\n",
+       "      <td>Fahrrad</td>\n",
+       "      <td>Biketec</td>\n",
+       "      <td>DB-Look</td>\n",
+       "      <td>CallBike</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4575</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kauf</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CAB GPRS 2.0</td>\n",
+       "      <td>Call a Bike</td>\n",
+       "      <td>Call a Bike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110581</th>\n",
+       "      <td>Fahrrad</td>\n",
+       "      <td>Biketec</td>\n",
+       "      <td>StadtRAD-Look</td>\n",
+       "      <td>StadtRAD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4582</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kauf</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CAB 2.0</td>\n",
+       "      <td>StadtRAD Hamburg</td>\n",
+       "      <td>Call a Bike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110588</th>\n",
+       "      <td>Fahrrad</td>\n",
+       "      <td>Biketec</td>\n",
+       "      <td>DB-Look</td>\n",
+       "      <td>CallBike</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4589</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kauf</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CAB GPRS 2.0</td>\n",
+       "      <td>Call a Bike</td>\n",
+       "      <td>Call a Bike</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               VEHICLE_MODEL_TYPE VEHICLE_MANUFACTURER_NAME  \\\n",
+       "VEHICLE_HAL_ID                                                \n",
+       "110466                    Fahrrad                   Biketec   \n",
+       "110471                    Fahrrad                   Biketec   \n",
+       "110574                    Fahrrad                   Biketec   \n",
+       "110581                    Fahrrad                   Biketec   \n",
+       "110588                    Fahrrad                   Biketec   \n",
+       "\n",
+       "               VEHICLE_MODEL_NAME VEHICLE_TYPE_NAME  VIN  REGISTRATION_PLATE  \\\n",
+       "VEHICLE_HAL_ID                                                                 \n",
+       "110466                    DB-Look          CallBike  NaN                 NaN   \n",
+       "110471                    DB-Look          CallBike  NaN                 NaN   \n",
+       "110574                    DB-Look          CallBike  NaN                 NaN   \n",
+       "110581              StadtRAD-Look          StadtRAD  NaN                 NaN   \n",
+       "110588                    DB-Look          CallBike  NaN                 NaN   \n",
+       "\n",
+       "                SERIAL_NUMBER  KW  FUEL_TYPE_NAME OWNERSHIP_TYPE  \\\n",
+       "VEHICLE_HAL_ID                                                     \n",
+       "110466                   4467 NaN             NaN           Kauf   \n",
+       "110471                   4472 NaN             NaN           Kauf   \n",
+       "110574                   4575 NaN             NaN           Kauf   \n",
+       "110581                   4582 NaN             NaN           Kauf   \n",
+       "110588                   4589 NaN             NaN           Kauf   \n",
+       "\n",
+       "                CAPACITY_AMOUNT ACCESS_CONTROL_COMPONENT_TYPE  \\\n",
+       "VEHICLE_HAL_ID                                                  \n",
+       "110466                      NaN                  CAB GPRS 2.0   \n",
+       "110471                      NaN                       CAB 4.0   \n",
+       "110574                      NaN                  CAB GPRS 2.0   \n",
+       "110581                      NaN                       CAB 2.0   \n",
+       "110588                      NaN                  CAB GPRS 2.0   \n",
+       "\n",
+       "                         COMPANY COMPANY_GROUP  \n",
+       "VEHICLE_HAL_ID                                  \n",
+       "110466               Call a Bike   Call a Bike  \n",
+       "110471               Call a Bike   Call a Bike  \n",
+       "110574               Call a Bike   Call a Bike  \n",
+       "110581          StadtRAD Hamburg   Call a Bike  \n",
+       "110588               Call a Bike   Call a Bike  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_vehicle = helper.load_dataset(RAW_DATA + VEHICLES, index_col='VEHICLE_HAL_ID', delimiter=';')\n",
+    "df_vehicle.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VIN</th>\n",
+       "      <th>REGISTRATION_PLATE</th>\n",
+       "      <th>SERIAL_NUMBER</th>\n",
+       "      <th>KW</th>\n",
+       "      <th>FUEL_TYPE_NAME</th>\n",
+       "      <th>CAPACITY_AMOUNT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11228.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6337.797292</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3586.889031</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3224.750000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6398.500000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9434.250000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17065.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       VIN  REGISTRATION_PLATE  SERIAL_NUMBER   KW  FUEL_TYPE_NAME  \\\n",
+       "count  0.0                 0.0   11228.000000  0.0             0.0   \n",
+       "mean   NaN                 NaN    6337.797292  NaN             NaN   \n",
+       "std    NaN                 NaN    3586.889031  NaN             NaN   \n",
+       "min    NaN                 NaN       3.000000  NaN             NaN   \n",
+       "25%    NaN                 NaN    3224.750000  NaN             NaN   \n",
+       "50%    NaN                 NaN    6398.500000  NaN             NaN   \n",
+       "75%    NaN                 NaN    9434.250000  NaN             NaN   \n",
+       "max    NaN                 NaN   17065.000000  NaN             NaN   \n",
+       "\n",
+       "       CAPACITY_AMOUNT  \n",
+       "count              0.0  \n",
+       "mean               NaN  \n",
+       "std                NaN  \n",
+       "min                NaN  \n",
+       "25%                NaN  \n",
+       "50%                NaN  \n",
+       "75%                NaN  \n",
+       "max                NaN  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_vehicle.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task:<br>\n",
+    "1: build dataframe with potential features by joining dataframes\n",
+    "(maybe I will create one CSV already, otherwise too complex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Descriptive Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task:<br>\n",
+    "1: Split data into train and test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tasks:<br>\n",
+    "1: find null values<br>\n",
+    "2: handle/impute null values (hint: distinguish between categorical and numerical)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df_vehicle.isnull().sum()#.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task: Outlier detection\n",
+    "1: find outlier\n",
+    "2: crop data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# boxplots on 1-2 colunms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task: Check correlations between features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#corr_matrix = dataframe.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
